// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon handles invalid icon sources 1`] = `
Object {
  "Component": Object {
    "active": false,
    "alpha": 1,
    "attached": true,
    "boundsMargin": null,
    "clipping": false,
    "color": 4294967295,
    "enabled": true,
    "flex": false,
    "flexItem": false,
    "h": 50,
    "hasFinalFocus": false,
    "hasFocus": false,
    "id": 8,
    "isComponent": true,
    "mount": 0,
    "mountX": 0,
    "mountY": 0,
    "pivot": 0.5,
    "pivotX": 0.5,
    "pivotY": 0.5,
    "ref": "Component",
    "renderOfScreen": undefined,
    "renderToTexture": false,
    "scale": 1,
    "scaleX": 1,
    "scaleY": 1,
    "state": "",
    "tag": [Function],
    "tags": Array [
      "Component",
    ],
    "type": "Icon",
    "visible": true,
    "w": 50,
    "x": 0,
    "y": 0,
    "zIndex": 0,
  },
}
`;

exports[`Icon renders an icon path 1`] = `
Object {
  "Component": Object {
    "active": false,
    "alpha": 1,
    "attached": true,
    "boundsMargin": null,
    "clipping": false,
    "color": 4294967295,
    "enabled": true,
    "flex": false,
    "flexItem": false,
    "h": 50,
    "hasFinalFocus": false,
    "hasFocus": false,
    "id": 2,
    "isComponent": true,
    "mount": 0,
    "mountX": 0,
    "mountY": 0,
    "pivot": 0.5,
    "pivotX": 0.5,
    "pivotY": 0.5,
    "ref": "Component",
    "renderOfScreen": undefined,
    "renderToTexture": false,
    "scale": 1,
    "scaleX": 1,
    "scaleY": 1,
    "state": "",
    "tag": [Function],
    "tags": Array [
      "Component",
    ],
    "texture": Object {
      "src": "assets/images/ic_lightning_white_32.png",
      "type": "ImageTexture",
    },
    "type": "Icon",
    "visible": true,
    "w": 50,
    "x": 0,
    "y": 0,
    "zIndex": 0,
  },
}
`;

exports[`Icon renders an inline svg 1`] = `
Object {
  "Component": Object {
    "active": false,
    "alpha": 1,
    "attached": true,
    "boundsMargin": null,
    "clipping": false,
    "color": 4294967295,
    "enabled": true,
    "flex": false,
    "flexItem": false,
    "h": 50,
    "hasFinalFocus": false,
    "hasFocus": false,
    "id": 6,
    "isComponent": true,
    "mount": 0,
    "mountX": 0,
    "mountY": 0,
    "pivot": 0.5,
    "pivotX": 0.5,
    "pivotY": 0.5,
    "ref": "Component",
    "renderOfScreen": undefined,
    "renderToTexture": false,
    "scale": 1,
    "scaleX": 1,
    "scaleY": 1,
    "state": "",
    "tag": [Function],
    "tags": Array [
      "Component",
    ],
    "texture": Object {
      "type": "StaticCanvasTexture",
    },
    "type": "Icon",
    "visible": true,
    "w": 50,
    "x": 0,
    "y": 0,
    "zIndex": 0,
  },
}
`;

exports[`Icon renders an svg path 1`] = `
Object {
  "Component": Object {
    "active": false,
    "alpha": 1,
    "attached": true,
    "boundsMargin": null,
    "clipping": false,
    "color": 4294967295,
    "enabled": true,
    "flex": false,
    "flexItem": false,
    "h": 50,
    "hasFinalFocus": false,
    "hasFocus": false,
    "id": 4,
    "isComponent": true,
    "mount": 0,
    "mountX": 0,
    "mountY": 0,
    "pivot": 0.5,
    "pivotX": 0.5,
    "pivotY": 0.5,
    "ref": "Component",
    "renderOfScreen": undefined,
    "renderToTexture": false,
    "scale": 1,
    "scaleX": 1,
    "scaleY": 1,
    "state": "",
    "tag": [Function],
    "tags": Array [
      "Component",
    ],
    "texture": Object {
      "type": "StaticCanvasTexture",
    },
    "type": "Icon",
    "visible": true,
    "w": 50,
    "x": 0,
    "y": 0,
    "zIndex": 0,
  },
}
`;
